# bubble

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  conftest.py  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish.yml
bubble/: __init__.py  __main__.py  ai.py  auth_proxy.py  automation.py  claude.py  clean.py  cli.py  clone.py  cloud.py  cloud_types.py  config.py  container_helpers.py  default_repos.json  finalization.py  git_store.py  github_token.py  graphql_validator.py  image_management.py  incus_bridge.py  lake_cache.py  lean.py  lifecycle.py  native.py  network.py  notices.py  output.py  provisioning.py  relay.py  remote.py  repo_registry.py  security.py  setup.py  skill.py  spinner.py  target.py  token_store.py  tools.py  tunnel.py  vscode.py  (+1 more)
bubble/commands/: __init__.py  cloud_cmd.py  completion.py  doctor.py  images.py  infrastructure.py  internal.py  lifecycle.py  list_cmd.py  relay_cmd.py  remote_cmd.py  security_cmd.py  settings.py  status_cmd.py
bubble/data/: skill.md
bubble/hooks/: __init__.py  lean.py  python.py
bubble/images/: builder.py
bubble/images/scripts/: base.sh  cloud-init.sh  emacs.sh  lean-base.sh  lean-lean4.sh  lean-mathlib.sh  lean-toolchain.sh  lean-vscode.sh  lean.sh  neovim.sh  python.sh  vscode.sh
bubble/images/scripts/tools/: claude-code.sh  claude.sh  codex.sh  elan.sh  emacs.sh  gh.sh  neovim.sh  pi.sh  pins.json  uv.sh  vscode.sh
bubble/runtime/: base.py  colima.py  incus.py
claude-skill/: SKILL.md
config/: com.bubble.git-update.plist  com.bubble.image-refresh.plist  com.bubble.relay-daemon.plist  com.lean-bubbles.git-update.plist  com.lean-bubbles.image-refresh.plist
lean_bubbles/: __init__.py  automation.py  cli.py  config.py  git_store.py  lake_cache.py  lifecycle.py  naming.py  network.py  pr_metadata.py  vscode.py  wrap.py
lean_bubbles/extensions/: claude.py  zulip.py
lean_bubbles/images/scripts/: lean-base.sh  lean-batteries.sh
lean_bubbles/runtime/: colima.py  incus.py
scratch/: forkproxy-repro.sh
tests/: conftest.py  test_ai.py  test_auth_proxy.py  test_authorized_keys.py  test_branch_no_target.py  test_bridge_listener.py  test_build_lock.py  test_claude.py  test_claude_projects_symlink.py  test_cloud.py  test_colima.py  test_completion.py  test_config.py  test_customize.py  test_editor.py  test_ephemeral.py  test_fork_push.py  test_get_info_remote.py  test_git_store.py  test_github_security_override.py  test_github_token.py  test_graphql_validator.py  test_hooks.py  test_integration.py  test_internal.py  test_lake_cache.py  test_lifecycle.py  test_list_columns.py  test_list_remote.py  test_mounts.py  test_multi_target.py  test_naming.py  test_native.py  test_network.py  test_notices.py  test_reattach_network.py  test_relay.py  test_remote.py  test_repo_registry.py  test_security.py  (+10 more)
